# tinyrag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
chatboti/: __init__.py  cli.py  docker.py  logger.py  mcp_server.py  rag.py  server.py
chatboti/data/: 2025-09-02-speaker-bio.csv  embeddings-amazon-titan-embed-text-v-2-0.json  embeddings-text-embedding-3-small.json
tinyrag/: agent.py  cli.py  config.py  fastapi_server.py  index.html  mcp_client.py  mcp_server.py  rag.py  run_docker.py  server.py  setup_logger.py
tinyrag/data/: embeddings-text-embedding-3-small.json
